# TEAiCH-2

./: analysis.py  chatbot.py  data_processor.py  emotion_log2.json  main.py  pyproject.toml  replit.nix  visualizations.py
audio/: audio.py
data/: emotion_log.json  emotion_log2.json  slides_log.json  speech_log.json
emotions/: emotion.py  slides.py
